--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ extraHead = '<script async src="https://www.googletagmanager.com/gtag/js?id=UA-x
 
 [[params.socials]]
 name = "🏠 Beranda"
-link = "https://bio.link/andikatulusp"
+link = "https://bucin-kode.github.io/kuliahphp"
 
 [[params.socials]]
 name = "👦 Penulis"
